crates/math-core/tests/snapshots/error_test__bigl_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\bigl x 1 \\bigr)"
---
Error: There must be a parenthesis after "\big, \Big, ...", but not found.
   ╭─[ <input>:1:7 ]
   │
 1 │ \bigl x 1 \bigr)
   │       ┬  
   │       ╰── expected a delimiter after "\big, \Big, ..."
───╯
